--- a/fake_data.ipynb
+++ b/fake_data.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This document aims to demonstrate codes that reproduce the results of the manuscript entitled **Application of mechanistic methods to clinical trials in multiple sclerosis: the simvastatin case** \n",
+    "This document aims to demonstrate codes that reproduce the results of the manuscript entitled **Applying causal models to understand the mechanism of action of simvastatin** \n",
     "\n",
     "We will simulate **fake data** that will produce similar (but not identical) results to the real data reported in our manuscript. The information is shared by covariance matrices and simulation methods in R. In some instances the results from original data is differnt from here,  because of slighlty different distribution of variables in our real data. This document is intended to help other researchers to use our methods in their own data.\n",
     "\n",
